# ir-s25

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  about.md  main.py  pyproject.toml  run_dev.bat  run_dev.sh  run_prod.bat  run_prod.sh  setup.bat  setup.sh
data/bad_words/: bad_words.txt
data/embedding_directory/: documents.json
data/evaluation/: general_metrics.json  indexer_responses.json  llm_metrics.json  llm_responses.json  queries.json
data/index_directory/: _MAIN_2.toc  document_lengths.json  document_word_count.json  documents.json  index.json
data/llm_tree_index/: builder.json
data/scrapped/: index_1_1.json
data/spell_directory/: counter.json  settings.json
frontend/: constants.ts  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/app/[document]/: page.tsx
frontend/app/chat/: chat.module.css  page.tsx
frontend/app/doc/[document]/: DocumentPage.module.css  page.tsx
frontend/app/search/: page.tsx  search.module.css
frontend/components/: BackLink.module.css  BackLink.tsx  Dropdown.module.css  Dropdown.tsx  MatrixBackground.module.css  MatrixBackground.tsx
src/: RAG.ipynb  Yaneev_week_3.ipynb  bloom.py  embedding.ipynb  embedding.py  embeddingBallls.ipynb  embeddingV2.py  embeddingV3 copy.ipynb  embeddingV3.ipynb  embedding_n.ipynb  indexer.ipynb  indexer.md  indexer.py  inverted_index.py  llm_indexer.py  pipeline.py  pippeline.py  rag.py  rag_local.py  scrapper.ipynb  scrapper.py  setup.py  spellcheck.ipynb  spellcheck.py  test.ipynb  utils.py  w2v_indexer.py
src/notebooks/: bert_indexer.ipynb  content_filter.ipynb  evaluate.ipynb  evaluation.ipynb  inverted_index.ipynb  rag.ipynb  scrapper.ipynb  spellcheck.ipynb  w2v_indexer.ipynb
