[project]
name = "ir-s25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annoy>=1.17.3",
    "beautifulsoup4>=4.13.3",
    "fastapi[standard]>=0.115.11",
    "g4f>=0.5.2.2",
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "nltk>=3.9.1",
    "openai>=1.78.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.9.4",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "uvicorn>=0.34.0",
    "whoosh>=2.7.4",
]

[tool.ruff]
extend-include = ["*.ipynb"]
extend-select = ["I"]
fix=true
line-length = 90

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "platform_system == 'Windows'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
