[project]
name = "ir-s25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "annoy>=1.17.3",
    "beautifulsoup4>=4.13.3",
    "bitsandbytes>=0.45.5",
    "browser-cookie3>=0.20.1",
    "datasets>=3.6.0",
    "fastapi[standard]>=0.115.11",
    "g4f>=0.5.2.2",
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "openai>=1.78.1",
    "orjson>=3.10.18",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "protobuf>=6.31.0",
    "pybloom-live>=4.0.0",
    "python-dotenv>=1.0.1",
    "ragas>=0.2.15",
    "requests>=2.32.3",
    "rouge>=1.0.1",
    "ruff>=0.9.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "sentencepiece>=0.2.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "uvicorn>=0.34.0",
    "whoosh>=2.7.4",
]

[tool.ruff]
extend-include = ["*.ipynb"]
extend-select = ["I"]
fix=true
line-length = 90

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "platform_system == 'Windows'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
